--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".NotificationActivity">
+    tools:context=".Activities.NotificationActivity">
 
     <EditText
         android:id="@+id/title"
